# brand-nexus

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MCP-Implementation-Summary.md  MCP_ADVANCED_EXAMPLES.md  MCP_SERVER_CONFIG_GUIDE.md  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  chart_script.py  deploy_mcp_server.sh  domain_specific_mcp_server.py  pyproject.toml  requirements-dev.txt  requirements.txt  script.py  script_1.py  script_2.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: build.yml  deploy.yml  lint.yml  security.yml  test.yml
src/brandnexus/: __init__.py  main.py
src/brandnexus/config/: environment.py  settings.py
src/brandnexus/core/: classifier.py  database.py  indexer.py  search.py
src/brandnexus/models/: document.py  schemas.py
src/brandnexus/utils/: file_utils.py  helpers.py
tests/: conftest.py
tests/e2e/: test_client_integration.py
tests/integration/: test_database.py  test_mcp_server.py
tests/performance/: test_indexing_speed.py  test_search_performance.py
tests/unit/: test_classifier.py  test_config.py  test_core.py  test_database.py  test_indexer.py  test_search.py
