[project]
name = "brand-nexus"
version = "0.1.0"
description = "Brand Nexus"
authors = [{ name = "Brand Nexus", email = "dev@example.com" }]
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["ruff", "black", "mypy", "pytest", "pytest-cov", "pytest-asyncio"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false

[tool.pytest.ini_options]
addopts = "-q --cov=src/brandnexus --cov-report=term-missing"
